add jdk8, mvn3, and sqlcl

--- a/etc/starship/config.toml
+++ b/etc/starship/config.toml
@@ -1,6 +1,9 @@
 add_newline = false
 right_format = """$time"""
 
+[container]
+disabled = true
+
 [sudo]
 format = "[$symbol]($style)"
 symbol = "🔓 "
